# distortos

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: Toolchain-cortex-m7.cmake  distortos-config.cmake  distortos-test.cmake  distortos-utils.cmake  hexmath.cmake  ldscript.cmake
cmake/cpu/: ARM.cmake  CORTEX-M7.cmake  CORTEX.cmake  STM32.cmake  STM32F7.cmake  STM32F76.cmake  STM32F769.cmake  STM32F769N.cmake  STM32F769NI.cmake
source/board/STM32/STM32F7/32F769IDISCOVERY/: 32F769IDISCOVERY.cmake
source/board/ST_32F769IDISCOVERY/: ST_32F769IDISCOVERY.cmake
source/scheduler/: distortosPreinitArray.cpp
